# GherkinSync

./: .gitignore  Cargo.toml  LICENSE.MD  README.MD  README.md
.github/workflows/: ci.yml
csharp/: Class1.cs  Directory.Build.props  GherkinSync.sln  GherkinSync.slnx  README.MD  disablewarnings.globalconfig
csharp/Features/: Valid Login.feature  Valid_Login.feature
csharp/GherkinSync/: AnalyzerReleases.Shipped.md  GherkinParser.cs  GherkinSync.csproj  SyncedFeatureAttribute.cs  SyncedFeatureGenerator.cs  SyncedTestAttribute.cs  TestDiscoverer.cs
csharp/GherkinSync.Analyzer/: GherkinSync.Analyzer.csproj  SyncedFeatureAttribute.cs  SyncedFeatureGenerator.cs
csharp/GherkinSync.TestAdapter/: GherkinParser.cs  GherkinSync.TestAdapter.csproj  SyncedTestAttribute.cs  TestDiscoverer.cs  TestExecutor.cs  TestProperties.cs
csharp/TestProject/: LoginSteps.cs  TestProject.csproj  test.runsettings
rust/: Cargo.toml  README.MD
rust/Features/: Valid_Login.feature
rust/gherkin_sync/: Cargo.toml
rust/gherkin_sync/src/: helpers.rs  lib.rs  synced_feature_impl.rs  synced_test_impl.rs
rust/src/: lib.rs
rust/test_project/: Cargo.toml
rust/test_project/src/: lib.rs
