[package]
name = "gherkin_sync"
version = "1.5.1"
edition = "2024"
description = "Simple attributes for syncing Gherkin specifications with implementations."
license = "GPL-3.0"
readme = "../README.MD"
documentation = "https://lib.rs/gherkin_sync"
homepage = "https://github.com/doublecouponday/gherkin_sync"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.117", features = ["full"] }
quote = "1.0.45"
proc-macro2 = "1.0"
